# satisfactory-calculator

./: .npmrc  .oxfmtrc.jsonc  .oxlintrc.jsonc  AGENTS.md  README.md  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.cursor/: Dockerfile  environment.json
.github/workflows/: ci.yml
patches/: or-tools-wasm@0.9.1.patch
public/rust-solver/: satisfactory_exact_solver.js  worker.js
rust/solver/: Cargo.toml  README.md
rust/solver/examples/: minrepro.rs  probe.rs
rust/solver/fixtures/: browser-factory-benchmark.json  game-data.json
rust/solver/src/: bounds.rs  data.rs  graph.rs  lib.rs  optimizer.rs  patterns.rs  rational.rs  underclocks.rs  validation.rs
rust/solver/tests/: game_data.rs  parity.rs
scripts/: browser-benchmark.mjs  build-rust-solver.sh  export-solver-fixture.mjs
src/app/: globals.css  layout.tsx  page.tsx  planner-page-client.tsx
src/app/benchmark/: page.tsx
src/app/factories/: page.tsx
src/app/factory/: factory-page-client.tsx  page.tsx
src/app/prototype/: page.tsx
src/components/planner/: belt-flow-visual.tsx  belt-tier-panel.tsx  downstream-lanes.tsx  excess-panel.tsx  flow-endpoint-link.tsx  machine-group-card.tsx  merge-plan-display.tsx  planner-app.tsx  raw-inputs-panel.tsx  results-panel.tsx  solve-diagnostics-panel.tsx  splitter-plan-display.tsx  stage-input-belts.tsx  targets-panel.tsx
src/data/: belts.ts  items.ts  recipes.ts  types.ts
src/lib/: build-sections.ts  factory-storage.ts  planner-storage.test.ts  planner-storage.ts
src/lib/fixtures/: demo-factory.json  (+2 more)
(+75 files in other folders)
