[package]
name = "satisfactory-exact-solver"
version = "0.1.0"
edition = "2021"
description = "Rust/WASM port of the exact Satisfactory production optimizer (Pumpkin CP backend)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-bigint = "0.4"
num-integer = "0.1"
num-rational = "0.4"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Component crates instead of the pumpkin-solver facade: the facade depends on
# signal-hook (for its CLI), which does not compile for wasm32-unknown-unknown.
pumpkin-core = "0.4"
pumpkin-constraints = "0.4"
pumpkin-conflict-resolvers = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[dev-dependencies]
env_logger = "0.11.11"
